<resources>
    <string name="app_name">Roro</string>
    <string name="next">NEXT</string>
    <string name="previous">PREV</string>
    <string name="schedule_company_meeting">Schedule Company Meeting</string>
    <string name="back">BACK</string>
    <string name="schedule_a_meeting">SCHEDULE A MEETING</string>
    <string name="submit">submit</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
</resources>
