<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ScheduleActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_10ssp"
                    android:layout_height="@dimen/_10ssp"
                    android:background="@drawable/ic_previous" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/schedule_a_meeting"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSubmit"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <EditText
            android:id="@+id/meeting_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5ssp"
            android:background="@drawable/edit_background"
            android:focusable="false"
            android:hint="@string/meeting_date"
            android:padding="@dimen/_5ssp"
            android:singleLine="true"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5ssp"
            android:background="@drawable/edit_background"
            android:editable="false"
            android:hint="@string/start_time"
            android:padding="@dimen/_5ssp"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5ssp"
            android:background="@drawable/edit_background"
            android:editable="false"
            android:hint="@string/end_time"
            android:padding="@dimen/_5ssp"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5ssp"
            android:background="@drawable/edit_background"
            android:hint="@string/description"
            android:lines="3"
            android:maxLength="20"
            android:padding="@dimen/_5ssp"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_5ssp"
        android:layout_marginEnd="@dimen/_10ssp"
        android:layout_marginBottom="@dimen/_5ssp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</RelativeLayout>