<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_10ssp"
                        android:layout_height="@dimen/_10ssp"
                        android:background="@drawable/ic_previous" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previous"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="14-02-2020"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:id="@+id/llNext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_12ssp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:layout_width="@dimen/_10ssp"
                        android:layout_height="@dimen/_10ssp"
                        android:background="@drawable/ic_next" />

                </LinearLayout>

            </RelativeLayout>

        </Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnSchedule"
            android:layout_below="@+id/toolbar" />

        <Button
            android:id="@+id/btnSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_5ssp"
            android:layout_marginEnd="@dimen/_10ssp"
            android:layout_marginBottom="@dimen/_5ssp"
            android:background="@drawable/button_background"
            android:text="@string/schedule_company_meeting"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</layout>